# libxmlmm

./: .gitattributes  .gitignore  ChangeLog.txt  Doxyfile  Makefile  Makefile.am  News.txt  README  README.md  README.txt  Readme.txt  bootstrap.sh  build_mingw32_sdk.bat  configure  configure.ac  copy_libs.bat  libxmlmm-test.vcproj  libxmlmm.pc.in  libxmlmm.project  libxmlmm.sln  libxmlmm.uml  libxmlmm.vcproj  libxmlmm.vcxproj  libxmlmm.vcxproj.filters  libxmlmm.workspace  libxmlmmtest.project  xmlmmtest.vcxproj  xmlmmtest.vcxproj.filters
apidoc/: Doxyfile.in  Doxyfile.win32  Makefile.am
doc/: Makefile.am
docs/: reading-a-document.md  writing-a-document.md
include/: Attribute.h  CData.h  Comment.h  Content.h  Document.h  Element.h  LibXmlSentry.h  Makefile.am  defines.h  exceptions.h  utils.h
include/libxmlmm/: Comment.h  Content.h  Makefile.am  Node.h  ProcessingInstruction.h  Text.h  defines.h  exceptions.h
libxmlmm/: Attribute.cpp  Attribute.h  CData.cpp  CData.h  Comment.cpp  Comment.h  Content.cpp  Content.h  Document.cpp  Document.h  Element.cpp  Element.h  LibXmlSentry.cpp  LibXmlSentry.h  Node.cpp  Node.h  ProcessingInstruction.cpp  ProcessingInstruction.h  Text.cpp  Text.h  defines.h  exceptions.h  libxmlmm.h  libxmlmm.vcxproj  libxmlmm.vcxproj.filters  utils.cpp  utils.h
libxmlmm-test/: CDataTest.cpp  DocumentTest.cpp  ElementTest.cpp  libxmlmm-test.vcxproj  libxmlmm-test.vcxproj.filters  main.cpp  rtest.cpp  rtest.h  test.cpp
src/: Attribute.cpp  Attribute.h  CData.cpp  CData.h  Comment.cpp  Comment.h  Content.cpp  Content.h  Document.cpp  Document.h  Element.cpp  Element.h  LibXmlSentry.h  Makefile.am  Node.cpp  Node.h  ProcessingInstruction.cpp  ProcessingInstruction.h  String.cpp  String.h  Text.cpp  Text.h  copy_libs.bat  defines.h  libxmlmm.h  libxmlmm.project  libxmlmm.vcproj  utils.cpp  utils.h
test/: CDataTest.cpp  DocumentTest.cpp  ElementTest.cpp  Makefile.am  StringTest.cpp  libxmlmm-test.vcproj  libxmlmmtest.project  rtest.cpp  rtest.h  test.cpp
